--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -56,9 +56,9 @@
                                 <li><a class="dropdown-item" href="{{ url_for('customers.list') }}">
                                     <i class="bi bi-people me-2"></i>お客様管理
                                 </a></li>
-                                <li><a class="dropdown-item" href="{{ url_for('properties.list') }}">
-                                    <i class="bi bi-building me-2"></i>物件管理
-                                </a></li>
+                                <li>                        <a class="dropdown-item" href="{{ url_for('properties.list') }}">
+                            <i class="bi bi-building me-2"></i>案件管理
+                        </a></li>
                             </ul>
                         </li>
                         
