--- a/app/templates/reports/view.html
+++ b/app/templates/reports/view.html
@@ -40,8 +40,15 @@
                     <table class="table table-bordered">
                         <tbody>
                             <tr>
-                                <th style="width: 35%">物件</th>
-                                <td>{{ report.property.name }}</td>
+                                <th style="width: 35%">案件</th>
+                                <td>
+                                    {{ report.property.name }}
+                                    <a href="{{ url_for('properties.view', id=report.property.id) }}" 
+                                       class="btn btn-sm btn-outline-primary ms-2" 
+                                       title="案件詳細を表示">
+                                        <i class="bi bi-building"></i> 案件詳細
+                                    </a>
+                                </td>
                             </tr>
                             <tr>
                                 <th>顧客</th>
@@ -145,9 +152,10 @@
                     <table class="table table-striped">
                         <thead>
                             <tr>
-                                <th style="width: 20%">エアコン情報</th>
-                                <th style="width: 15%">作業項目</th>
-                                <th style="width: 40%">作業内容</th>
+                                <th style="width: 18%">エアコン情報</th>
+                                <th style="width: 12%">作業項目</th>
+                                <th style="width: 35%">作業内容</th>
+                                <th style="width: 10%">作業金額</th>
                                 <th style="width: 25%">作業確認</th>
                             </tr>
                         </thead>
@@ -165,6 +173,13 @@
                                 </td>
                                 <td>{{ work_detail.work_item_name }}</td>
                                 <td>{{ work_detail.description|nl2br }}</td>
+                                <td>
+                                    {% if work_detail.work_amount %}
+                                        ¥{{ "{:,}".format(work_detail.work_amount) }}
+                                    {% else %}
+                                        -
+                                    {% endif %}
+                                </td>
                                 <td>{{ work_detail.confirmation or '' }}</td>
                             </tr>
                             {% endfor %}
