--- a/app/templates/schedules/view.html
+++ b/app/templates/schedules/view.html
@@ -90,7 +90,7 @@
 
                 <div class="row mb-3">
                     <div class="col-sm-3">
-                        <strong>関連物件:</strong>
+                        <strong>関連案件:</strong>
                     </div>
                     <div class="col-sm-9">
                         {% if schedule.schedule_property %}
